tests/models/enum/named/string/fail/lt.stderr
error: Support condition is min_length, max_length, alias, default and validate
 --> tests/models/enum/named/string/fail/lt.rs:6:9
  |
6 |         value: String
  |         ^^^^^
